# document-search

./: .dockerignore  Dockerfile.client  Dockerfile.server  Readme.md  docker-compose.yml
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css  main.tsx
client/src/components/: SideBar.tsx
client/src/contexts/: AuthContext.tsx
client/src/pages/: ChatPage.tsx  ForgotPassword.tsx  Home.tsx  ResetPassword.tsx  SignIn.tsx  SignUp.tsx  Verify.tsx
client/src/types/: session.ts
server/: .env.sample  .gitignore  pyproject.toml
server/app/: main.py
server/app/database/: db.py
server/app/lib/: constants.py  email_templates.py  exempted_paths.py  extract_text.py  qdrant.py  redis.py  send_email.py  similarity_search.py  vectors.py
server/app/middleware/: auth.py
server/app/models/: __init__.py  chat.py  chat_schema.py  pdf_schema.py  session.py  session_schema.py  user.py  user_schema.py
server/app/routers/: chat_routes.py  session_routes.py  user_routes.py
server/app/scheduler/: dump_data.py
